edit index template

--- a/views/index.pug
+++ b/views/index.pug
@@ -13,7 +13,7 @@ block content
           a(href="/subaru") Subaru
         li 
           a(href="/nissan") Nissan
-    p You can access this <a href="https://mjq48.sse.codesandbox.io/">Demo</a> to see this site in action. Even though the site looks very simple, this is not a static site. The pages are generated <strong>on the fly</strong> by Express the moment you click on a link.
+    p Even though the site looks very simple, this is not a static site. The pages are generated <strong>on the fly</strong> by Express the moment you click on a link.
     p If you want to clone this example go here: 
     a(href="https://github.com/mariobox/minimal-express-2020") https://github.com/mariobox/minimal-express-2020.
     <br /><br />
